--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
 :root {
+  --dark-1: #17181f;
+  --dark-2: #272833;
+  --dark-3: #2d2e39;
+  --dark-4: #3b3c47;
+  --light-1: #ffffff;
+  --light-2: #b0b0b0;
+  --primary-1: #3772ff;
+  --primary-2: #3b40e4;
+}
+
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--light-1);
+  background-color: var(--dark-1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,14 +24,21 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--primary-1);
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+  color: var(--primary-2);
 }
 
 body {
@@ -44,29 +61,16 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--primary-1);
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
 button:hover {
-  border-color: #646cff;
+  border-color: var(--primary-2);
 }
 
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
