add drop location indicator

--- a/src/components/Kanban/components/Column/Column.module.css
+++ b/src/components/Kanban/components/Column/Column.module.css
@@ -3,6 +3,11 @@
   padding: 0.8rem 1rem;
   border-radius: 0.75rem;
   position: relative;
+  transition: opacity 200ms ease-in-out;
+}
+
+.Header--isEmpty {
+  opacity: 0.5;
 }
 
 .Underline {
@@ -21,4 +26,8 @@
 
 .Content > * {
   margin: 1rem 0;
+}
+
+.Column--isDraggingOver {
+  outline: 2px dashed var(--dark-2);
 }
