--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,8 +4,14 @@
   padding: 0.3em 1.2em;
   border-radius: 1em;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .Button:hover {
   background-color: var(--primary-2);
+}
+
+.Button > svg {
+  margin-left: 0.25em;
 }
