--- a/src/components/Kanban/Kanban.module.css
+++ b/src/components/Kanban/Kanban.module.css
@@ -8,11 +8,11 @@
   margin-left: 1rem;
 }
 
-.Columns {
+.Lists {
   display: flex;
   gap: 1.5rem;
 }
 
-.Columns > * {
+.Lists > * {
   flex: 1;
 }
