--- a/src/components/Breadcrumbs/Breadcrumbs.module.css
+++ b/src/components/Breadcrumbs/Breadcrumbs.module.css
@@ -1,3 +1,12 @@
+.Breadcrumbs {
+  display: flex;
+  align-items: center;
+}
+
+.Breadcrumbs > * {
+  margin-right: 0.5rem;
+}
+
 .Breadcrumb {
   background-color: var(--dark-2);
   color: var(--light-1);
@@ -9,4 +18,5 @@
 
 .Breadcrumb:hover {
   background-color: var(--dark-3);
+  color: var(--light-1);
 }
