--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,15 +1,20 @@
 .Button {
   background-color: var(--primary-1);
   color: var(--light-1);
-  padding: 0.3em 1.2em;
-  border-radius: 1em;
+  padding: 0.5em 1.2em;
+  border-radius: 0.5em;
   cursor: pointer;
   display: flex;
   align-items: center;
+  width: fit-content;
 }
 
-.Button:hover {
+.Button:not(:disabled):hover {
   background-color: var(--primary-2);
+}
+
+.Button:disabled {
+  opacity: 0.25;
 }
 
 .Button > svg {
