--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -5,6 +5,11 @@
   min-width: 450px;
 }
 
+.Subtext {
+  font-size: 0.85em;
+  margin-top: 1rem;
+}
+
 .Button {
   width: 100%;
   padding: 0.75em 1.2em;
