implement project creation

--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -1,7 +1,8 @@
 .Projects {
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
 }
 
 .Project {
@@ -9,6 +10,7 @@
   padding: 2rem;
   border-radius: 0.5rem;
   cursor: pointer;
+  position: relative;
 }
 
 .Project:hover {
