--- a/src/components/Form/components/Repeater/Repeater.module.css
+++ b/src/components/Form/components/Repeater/Repeater.module.css
@@ -12,13 +12,22 @@
 }
 
 .Item {
-  background-color: transparent;
-  border: 2px solid var(--dark-4);
+  background-color: var(--dark-3);
   padding: 1em;
   border-radius: 0.5em;
   color: var(--light-1);
   font-size: 1em;
   position: relative;
+}
+
+.Item__Children {
+  display: flex;
+  gap: 1rem;
+}
+
+.Item__Children > * {
+  width: 100%;
+  margin-bottom: 0.5rem;
 }
 
 .Item__Wrapper {
