--- a/src/pages/Projects/components/CreateForm/CreateForm.module.css
+++ b/src/pages/Projects/components/CreateForm/CreateForm.module.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 4rem;
 }
 
 .Inner {
@@ -16,5 +16,7 @@
   padding: 1.5rem;
   border-radius: 0.75rem;
   width: 100%;
+  max-width: 1000px;
   height: 100%;
+  overflow: scroll;
 }
